<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="landscape"
    tools:context=".ui.DetailPccActivity">

    <data>
        <variable
            name="viewModel"
            type="com.example.test.viewmodel.DetailPccViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#212529">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#212529"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="#FEFEFE" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:textColor="@color/texto_titulo"
                android:textSize="40dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/m3_textfield_stroke_color_custom"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/m3_textfield_stroke_color_custom"
                app:counterTextColor="@color/m3_textfield_stroke_color_custom"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/m3_textfield_stroke_color_custom"
                app:hintTextColor="@color/m3_textfield_stroke_color_custom"
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/radicado"
                    android:text="@={viewModel.id}"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#0B5ED7"
                    android:textColorLink="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/m3_textfield_stroke_color_custom"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/m3_textfield_stroke_color_custom"
                app:counterTextColor="@color/m3_textfield_stroke_color_custom"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/m3_textfield_stroke_color_custom"
                app:hintTextColor="@color/m3_textfield_stroke_color_custom"
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/estado"
                    android:text="@={viewModel.status}"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#0B5ED7"
                    android:textColorLink="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/m3_textfield_stroke_color_custom"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/m3_textfield_stroke_color_custom"
                app:counterTextColor="@color/m3_textfield_stroke_color_custom"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/m3_textfield_stroke_color_custom"
                app:hintTextColor="@color/m3_textfield_stroke_color_custom"
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/empresa"
                    android:text="@={viewModel.company}"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#0B5ED7"
                    android:textColorLink="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/m3_textfield_stroke_color_custom"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/m3_textfield_stroke_color_custom"
                app:counterTextColor="@color/m3_textfield_stroke_color_custom"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/m3_textfield_stroke_color_custom"
                app:hintTextColor="@color/m3_textfield_stroke_color_custom"
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="top"
                    android:hint="@string/descripcion"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:scrollbars="vertical"
                    android:text="@={viewModel.description}"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#0B5ED7"
                    android:textColorLink="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:height="36dp"
                android:onClick="login"
                android:text="@string/ver_notificaciones"
                android:textColor="@color/white"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:theme="@style/BotonAzul" />

        </LinearLayout>

    </ScrollView>
</layout>